Complete home page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,168 @@
       </div>
       <!-- end of nav button -->
     </section>
+
+    <section class="section-feature">
+      <div class="row section__title">
+        <h2 class="section__title--main">How it work</h2>
+        <p class="section__title--sub">
+          Hello, we’re Omnifood, your new premium food delivery service.
+        </p>
+      </div>
+
+      <div class="row features__container">
+        <div class="col-4 feature__box">
+          <ion-icon name="fast-food-outline" class="feature__icon"></ion-icon>
+          <h3 class="feature__title">Choose Your Favorite Food</h3>
+          <p class="feature__content">
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage.
+          </p>
+        </div>
+
+        <div class="col-4 feature__box">
+          <ion-icon name="stopwatch" class="feature__icon"></ion-icon>
+          <h3 class="feature__title">Get Healthy Recipes Quickly</h3>
+          <p class="feature__content">
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage.
+          </p>
+        </div>
+
+        <div class="col-4 feature__box">
+          <ion-icon name="nutrition" class="feature__icon"></ion-icon>
+          <h3 class="feature__title">Order and Take Food Now</h3>
+          <p class="feature__content">
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage.
+          </p>
+        </div>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-outline-dark hero__button-item feature__btn">
+          Go order now!
+        </button>
+      </div>
+    </section>
+
+    <section class="section-story">
+      <div class="row">
+        <div class="col col-6"></div>
+        <div class="col col-4 story__box">
+          <h1 class="story__title">We created more foods for people</h1>
+          <p class="story__content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Necessitatibus, consequuntur. Error, a dolores voluptas saepe sit
+            soluta inventore id commodi vel quasi provident earum quisquam
+            doloremque, laboriosam expedita nisi! Consequatur.Lorem ipsum dolor,
+            sit amet consectetur adipisicing elit. Necessitatibus, consequuntur.
+            Error, a dolores voluptas saepe sit soluta inventore id commodi vel
+            quasi provident earum quisquam doloremque, laboriosam expedita nisi!
+            Consequatur.
+          </p>
+        </div>
+        <div class="col col-2"></div>
+      </div>
+    </section>
+
+    <section class="section-quote">
+      <div class="row">
+        <div class="col col-3"></div>
+        <div class="col col-4 quote__box">
+          <blockquote>
+            "When you drink the water, <span class="quote__bold">remember the spring"</span></br>
+            <cite class="quote__author">Nam Do</cite>
+          </blockquote>
+        </div>
+        <div class="col col-2 quote__button-box">
+          <button type="button" class="btn btn-outline-dark hero__button-item">
+            Visit Our Gallery
+          </button>
+        </div>
+        <div class="col col-3"></div>
+      </div>
+    </section>
+
+    <section class="section-meals">
+      <div class="meals__container row">
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/1.jpg" class="meal__img" />
+          </div>
+        </div>
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/2.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/3.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/4.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/5.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/6.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/7.jpg" class="meal__img" />
+          </div>
+        </div>        
+        <div class="meal__box col-3">
+          <div class="img__box">
+            <img src="img/8.jpg" class="meal__img" />
+          </div>
+        </div>       
+      </div>
+
+      <button type="button" class="btn btn-outline-dark hero__button-item meal__button">
+        Sign In Now
+      </button>
+    </section>
+
+    <footer class="footer">
+      <div class="row footer__link">
+          <div class="col-2"></div>
+          <div class="col-4">
+              <ul class="footer-nav">
+                  <li> <a href="#">About us</a></li>
+                  <li> <a href="#">Blog</a></li>
+                  <li> <a href="#">Press</a></li>
+                  <li> <a href="#">iOS App</a></li>
+                  <li> <a href="#">Android App</a></li>
+              </ul>
+          </div>
+          <div class="col-3">
+              <ul class="social-links">
+                  <li> <a href="#"><ion-icon name="logo-facebook" class="social-logo logo-facebook"></ion-icon></a></li>
+                  <li> <a href="#"><ion-icon name="logo-twitter" class="social-logo logo-twitter"></ion-icon></a></li>
+                  <li> <a href="#"><ion-icon name="logo-google" class="social-logo logo-googleplus"></ion-icon></a></li>
+                  <li> <a href="#"><ion-icon name="logo-instagram" class="social-logo logo-instagram"></ion-icon></a></li>
+              </ul>
+          </div>
+          <div class="col-3"></div>
+      </div>
+
+      <div class="row footer__quote">
+          <p>“Does it make you feel big to make a little boy cry?”</p>
+          <p>Huy Xu</p>
+      </div>
+  </footer>
   </body>
+
   <script
     src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -105,4 +266,5 @@
     crossorigin="anonymous"
   ></script>
   <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
+  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </html>
